--- a/examples/protocol_detector/Cargo.toml
+++ b/examples/protocol_detector/Cargo.toml
@@ -33,6 +33,8 @@ num-complex = "0.4"  # oder die neueste Version, falls verfügbar"
 path = "../wlan"
 [dependencies.lora]
 path = "../lora"
+[dependencies.zigbee]
+path = "../zigbee"
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 console_error_panic_hook = "0.1"
 console_log = "1"
